# yae

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  readme.md
cmake/: set_compiler_options.cmake  yae_lto.cmake
example_project/: CMakeLists.txt  yae_project.json
example_project/src/hello_world/: hello_world.module.json
modules/diag/yae_a/: CMakeLists.txt
modules/diag/yae_b/: CMakeLists.txt  yae_b.module.json
modules/diag/yae_b/code/public/yae_b/: yae_b.hpp
modules/diag/yae_c/: CMakeLists.txt  yae_c.module.json
modules/diag/yae_c/code/private/: yae_c.cpp
modules/examples/ecs/: CMakeLists.txt  ecs.module.json
modules/examples/ecs/code/private/: app.cpp  component_pool.cpp  entities_iterator.cpp  entity_collection.cpp  system.cpp
modules/examples/ecs/code/private/ecs/: app.cpp  component_pool.cpp  entity_collection.cpp
modules/examples/ecs/code/public/ecs/: app.hpp  big_bitset.hpp  component_pool.hpp  component_type_id.hpp  constants.hpp  entities_iterator.hpp  entity_collection.hpp  entity_filter.hpp  entity_id.hpp  isystem.hpp  system.hpp
modules/examples/ecs/code/public/ecs/internal/: component_pool.hpp  entity_has_component.hpp
modules/examples/ecs_benchmark/: CMakeLists.txt  ecs_benchmark.module.json
modules/examples/ecs_benchmark/code/private/: ecs_benchmark_main.cpp
modules/examples/ecs_tests/: CMakeLists.txt  ecs_tests.module.json
modules/examples/ecs_tests/code/private/: app_tests.cpp  entity_component_lookup_tests.cpp  test_app.cpp  test_app.hpp  test_components.hpp  tests.cpp
modules/examples/yae_example_benchmark/: CMakeLists.txt  yae_example_benchmark.module.json
modules/examples/yae_example_benchmark/code/private/: yae_example_benchmark.cpp
modules/examples/yae_example_benchmark_main/: CMakeLists.txt  yae_example_benchmark_main.module.json
modules/examples/yae_example_benchmark_main/code/private/: yae_example_benchmark_main.cpp
modules/examples/yae_example_executable/: CMakeLists.txt  yae_example_executable.module.json
modules/examples/yae_example_executable/code/private/: main.cpp
modules/examples/yae_example_header_only/: CMakeLists.txt  yae_example_header_only.module.json
modules/examples/yae_example_header_only/code/public/yae_example_header_only/: yae_example_header_only.hpp
modules/examples/yae_example_library/: CMakeLists.txt  yae_example_library.module.json
modules/examples/yae_example_library/code/private/: yae_example_library.cpp
modules/examples/yae_example_library/code/public/yae_example_library/: yae_example_library.hpp
modules/examples/yae_example_tests/: CMakeLists.txt  yae_example_tests.module.json
modules/examples/yae_example_tests/code/private/: .clang-tidy  yae_example_tests.cpp
modules/examples/yae_example_tests_main/: CMakeLists.txt  yae_example_tests_main.module.json
modules/examples/yae_example_tests_main/code/private/: yae_example_tests_main.cpp
modules/yae_core/: CMakeLists.txt  yae_core.module.json
modules/yae_core_tests/: CMakeLists.txt  yae_core_tests.module.json
modules/yae_core_tests/code/private/: yae_core_tests.cpp
scripts/: cleanup.py  cloned_repo_registry.py  cloned_repository_registry.py  cmake_generator.py  github_link.py  global_context.py  json_utils.py  make_project_files.py  modules_git_status.py  project_config.py  yae.py  yae_constants.py  yae_module.py  yae_module_registry.py  yae_package.py
